--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -78,3 +78,11 @@ test:
         # low amounts for fast failures.
         max_retries: 1
         retry_interval: 0
+
+production:
+  sessions:
+    default:
+      uri: <%= ENV['MONGOHQ_URL'] || 'mongodb://localhost:27017/controlenvy-development' %>
+      options:
+        skip_version_check: true
+        safe: true
