--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -79,6 +79,7 @@ test:
         max_retries: 1
         retry_interval: 0
 
+<% if ENV['MONGOHQ_URL'] %>
 production:
   sessions:
     default:
@@ -86,3 +87,4 @@ production:
       options:
         skip_version_check: true
         safe: true
+<% end %>
